First stage of the rename process - get rid of all amd_ prefixes - change either to geode_ or just to lx_ or gx_ depending on the processor. Change the name in the Makefiles and other collateral

--- a/README
+++ b/README
@@ -11,11 +11,11 @@ suppport dynamic rotation with XRandR, and Xv overlay support.
 
 = Configuration options =
 
-You can specify the AMD driver in the normal fashion:
+You can specify the Geode driver in the normal fashion:
 
 Section "Device"
 	Identifier "AMD Geode"
-	Driver "amd"
+	Driver "geode"
 	Option "blah" "blah"
 	...
 EndSection
