Updated the README with the URL of the Geode X.Org wiki and with info on the current Build Dependencies.

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-AMD Geode GX and LX Xorg graphics Driver
-May 9, 2007
+AMD Geode GX and LX X.Org graphics Driver
 ========================================
+Last updated:  2008-08-13
 
 = Introduction =
 
@@ -8,6 +8,20 @@ This is the X graphics driver for the AMD Geode GX and LX processors.
 The GX driver features XAA and EXA support for graphics acceleration,
 and the LX driver supports EXA (including compositing).  Both drivers
 suppport dynamic rotation with XRandR, and Xv overlay support.
+
+http://wiki.x.org/wiki/AMDGeodeDriver
+
+= Dependencies =
+
+As of version 2.9.0, this driver depends on X.Org server 1.3 or newer,
+because it utilizes the new common DDC probing libraries from X.Org.
+
+If necessary, it might be possible to create autoconf macros to make 
+this driver compile against older X servers, following this example:
+
+http://lists.freedesktop.org/archives/xorg-commit/2007-February/010341.html
+
+Patches accomplising the same trick for the Geode driver are welcome.
 
 = Configuration options =
 
@@ -46,6 +60,4 @@ ExaScratch: Specify the amount of extra EXA scratch buffer (in bytes)
 FBSize: Specify the size of the video space (in bytes)
 PanelGeometry: Specify the geometry of the attached panel ("<width>x<height>")
 
-
-
-
+= EOF =
