--- a/README
+++ b/README
@@ -7,7 +7,7 @@ Last updated:  2008-08-13
 This is the X graphics driver for the AMD Geode GX and LX processors.
 The GX driver features XAA and EXA support for graphics acceleration,
 and the LX driver supports EXA (including compositing).  Both drivers
-suppport dynamic rotation with XRandR, and Xv overlay support.
+support dynamic rotation with XRandR, and Xv overlay support.
 
 http://wiki.x.org/wiki/AMDGeodeDriver
 
@@ -21,7 +21,7 @@ this driver compile against older X servers, following this example:
 
 http://lists.freedesktop.org/archives/xorg-commit/2007-February/010341.html
 
-Patches accomplising the same trick for the Geode driver are welcome.
+Patches accomplishing the same trick for the Geode driver are welcome.
 
 = Configuration options =
 
