--- a/README
+++ b/README
@@ -1,6 +1,15 @@
 AMD Geode GX and LX graphics driver for X.Org
 =============================================
-Last updated:  2008-08-13
+README last updated: 2009-08-04
+
+GIT repository:
+        git://anongit.freedesktop.org/git/xorg/driver/xf86-video-geode
+
+Gitweb browser:
+        http://cgit.freedesktop.org/xorg/driver/xf86-video-geode
+
+Project homepage:
+	http://wiki.x.org/wiki/AMDGeodeDriver
 
 = Introduction =
 
@@ -8,8 +17,6 @@ This is the X graphics driver for the AMD Geode GX and LX processors.
 The GX driver features XAA and EXA support for graphics acceleration,
 and the LX driver supports EXA (including compositing).  Both drivers
 support dynamic rotation with XRandR, and Xv overlay support.
-
-http://wiki.x.org/wiki/AMDGeodeDriver
 
 = Roadmap =
 
