--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 AMD Geode GX and LX graphics driver for X.Org
 =============================================
-README last updated: 2009-08-04
+README last updated: 2009-09-03
 
 GIT repository:
         git://anongit.freedesktop.org/git/xorg/driver/xf86-video-geode
@@ -29,15 +29,23 @@ at which point xf86-video-cyrix and xf86-video-nsc will be retired.
 
 = Dependencies =
 
-As of version 2.9.0, this driver depends on X.Org server 1.3 or newer,
+As of version 2.11.4, this driver depends upon X server 1.5 or newer,
+because the GX Randr code utilizes dixSetPrivate whose API was modified 
+in a non backward-compatible way.
+
+  #ifdef'ing the changes from f1268f3ba8404129d358db3bb1e66f3841f7018a 
+  and b28abde0276ddd7f687242f3886f98b0e49a7fc2 might make it possible
+  to build this driver against older X servers. Patches are welcome.
+
+As of version 2.9.0, this driver depends on X server 1.3 or newer,
 because it utilizes the new common DDC probing libraries from X.Org.
 
-If necessary, it might be possible to create autoconf macros to make 
-this driver compile against older X servers, following this example:
+  If necessary, it might be possible to create autoconf macros to make 
+  this driver compile against older X servers, following this example:
 
-http://lists.freedesktop.org/archives/xorg-commit/2007-February/010341.html
+  http://lists.freedesktop.org/archives/xorg-commit/2007-February/010341.html
 
-Patches accomplishing the same trick for the Geode driver are welcome.
+  Patches accomplishing the same trick for the Geode driver are welcome.
 
 = FAQ =
 
