--- a/README
+++ b/README
@@ -30,15 +30,16 @@ at which point xf86-video-cyrix and xf86-video-nsc will be retired.
 Until then, the current situation for Geode coverage is as follow:
  
 xf86-video-geode
- * AMD Geode LX (a.k.a. GX3) PCI ID 0x1022:0x2081
- * AMD Geode GX (a.k.a. GX2) PCI ID 0x100B:0x0030 
+ * AMD Geode LX       (a.k.a. GX3) PCI ID 0x1022:0x2081
+ * AMD Geode GX       (a.k.a. GX2) PCI ID 0x100B:0x0030 
 
 xf86-video-nsc
- * NSC Geode GX (a.k.a. GX2) PCI ID 0x100B:0x0030
- * NSC Geode SC (a.k.a. GX1) PCI ID 0x100B:0x0504 
+ * NSC Geode Media GX (a.k.a. GX2) PCI ID 0x100B:0x0030
+ * NSC Geode SCx200   (a.k.a. GX1) PCI ID 0x100B:0x0504 
+ * NSC Geode SC1400   (a.k.a. GX1) PCI ID 0x100B:0x0104 
 
 xf86-video-cyrix
- * Cyrix Geode  (a.k.a. GX1) PCI ID 0x1078:0x0104 
+ * Cyrix Geode        (a.k.a. GX1) PCI ID 0x1078:0x0104 
 
 Please note that both NSC and GEODE support GX2. This is indeed correct.
 However, only GEODE has up-to-date code, while NSC is deprecated. 
