--- a/README
+++ b/README
@@ -30,16 +30,16 @@ at which point xf86-video-cyrix and xf86-video-nsc will be retired.
 Until then, the current situation for Geode coverage is as follow:
  
 xf86-video-geode
- * AMD Geode LX         (a.k.a. GX3) PCI ID 0x1022:0x2081
- * AMD Geode GX         (a.k.a. GX2) PCI ID 0x100B:0x0030 
+ * Geode LX      (a.k.a. GX3) PCI ID 0x1022:0x2081
+ * Geode GX      (a.k.a. GX2) PCI ID 0x100B:0x0030 (rebranded GX2)
 
 xf86-video-nsc
- * NSC Geode Media GX   (a.k.a. GX2) PCI ID 0x100B:0x0030
- * NSC Geode SCx200     (a.k.a. GX1) PCI ID 0x100B:0x0504 
- * NSC Geode SC1400     (a.k.a. GX1) PCI ID 0x100B:0x0104 
+ * Geode GX2     (a.k.a. GX2) PCI ID 0x100B:0x0030 (a.k.a. "Red Cloud")
+ * Geode SCx200  (a.k.a. GX1) PCI ID 0x100B:0x0504 
+ * Geode SC1400  (a.k.a. GX1) PCI ID 0x100B:0x0104 
 
 xf86-video-cyrix
- * Cyrix Geode Media GX (a.k.a. GX1) PCI ID 0x1078:0x0104 
+ * Geode MediaGX (a.k.a. GX1) PCI ID 0x1078:0x0104 
 
 Please note that both NSC and GEODE support GX2. This is indeed correct.
 However, only GEODE has up-to-date code, while NSC is deprecated. 
