--- a/NEWS
+++ b/NEWS
@@ -12,12 +12,12 @@ Noticable changes compared to 2.11.8
    GNOME and KDE desktop environments, to video player applications and
    to the Chrome and Firefox browsers.
 
- * Improve the performance of this driver:
+ * Improves the performance of this driver:
                       Before         After
     -aa10text         4660/sec       53300/sec
     -aa24text         2740/sec       16200/sec
 
- * Validate resolutions rather than resort to virtual screen sizes.
-   Add a new screen resolution at 106.50MHz to those we know about.
+ * Validates resolutions rather than resorts to virtual screen sizes.
+   Adds a new screen resolution at 106.50MHz to those we know about.
 
- * Clarify the copyrights of each file and update COPYING to match.
+ * Clarifies the copyrights of each file and update COPYING to match.
