--- a/NEWS
+++ b/NEWS
@@ -12,7 +12,7 @@ Noticable changes compared to 2.11.8
    GNOME and KDE desktop environments, to video player applications and
    to the Chrome and Firefox browsers.
 
- * Improves the performance of this driver:
+ * Dramatically improves the performance:
                       Before         After
     -aa10text         4660/sec       53300/sec
     -aa24text         2740/sec       16200/sec
@@ -20,4 +20,4 @@ Noticable changes compared to 2.11.8
  * Validates resolutions rather than resorts to virtual screen sizes.
    Adds a new screen resolution at 106.50MHz to those we know about.
 
- * Clarifies the copyrights of each file and update COPYING to match.
+ * Clarifies the copyrights of each file and updates COPYING to match.
