--- a/README
+++ b/README
@@ -16,13 +16,21 @@ Project homepage:
 This is the X graphics driver for the AMD Geode GX and LX processors.
 The GX driver features XAA and EXA support for graphics acceleration,
 and the LX driver supports EXA (including compositing).  Both drivers
-support dynamic rotation with XRandR, and Xv overlay support.
+support Xv overlay supprot and dynamic rotation with XRandR.
+
+= Dependencies =
+
+As of version 2.9.0, this driver depends on X server 1.3 or newer,
+because it utilizes the new common DDC probing libraries from X.Org.
+
+  If necessary, it might be possible to create autoconf macros to make 
+  this driver compile against older X servers, following this example:
+
+  http://lists.freedesktop.org/archives/xorg-commit/2007-February/010341.html
+
+  Patches accomplishing the same trick for the Geode driver are welcome.
 
 = Roadmap =
-
-Support for X servers older than 1.4 is expected to be dropped in the
-near future.  If your distribution still hasn't upgraded, please urge 
-them to get around it soon.
 
 Support for old GX1 Geodes by Cyrix and NSC will be reintroduced soon,
 at which point xf86-video-cyrix and xf86-video-nsc will be retired.
@@ -44,23 +52,13 @@ xf86-video-cyrix
 Please note that both NSC and GEODE support GX2. This is indeed correct.
 However, only GEODE has up-to-date code, while NSC is deprecated. 
 
-= Dependencies =
-
-As of version 2.9.0, this driver depends on X server 1.3 or newer,
-because it utilizes the new common DDC probing libraries from X.Org.
-
-  If necessary, it might be possible to create autoconf macros to make 
-  this driver compile against older X servers, following this example:
-
-  http://lists.freedesktop.org/archives/xorg-commit/2007-February/010341.html
-
-  Patches accomplishing the same trick for the Geode driver are welcome.
-
 = Maximum Resolutions =
+
+The driver suppports all maximum resolutions advertized by AMD, namely:
 
 LX: 1920x1440 (CRT) and 1600x1200 (TFT)
 GX: 1600x1200 (CRT) and 1280x1024 (TFT)
-SC: 1280x1024 (CRT/TFT) - Currently unsupported by this driver.
+SC: 1280x1024 (CRT/TFT) - Currently unsupported by this driver -
 
 = FAQ =
 
@@ -85,7 +83,7 @@ A: See http://www.x.org/wiki/Development/Documentation/ServerDebugging
 
 Q: How do I test development snapshots from the upstream GIT repository?
 
-A: Run the following commands from a command line interpreter shell...
+A: Run the following commands from a command line interpreter shell:
    1. git clone git://anongit.freedesktop.org/git/xorg/driver/xf86-video-geode 
    2. Debian/Ubuntu:  apt-get install autoconf automake libtool xutils-dev
                       apt-get install build-dep xserver-xorg-video-geode
@@ -104,16 +102,16 @@ A: See http://www.x.org/wiki/Development/Documentation/SubmittingPatches
 
 = Configuration options =
 
-You can specify the Geode driver in the normal fashion:
+You can specify driver options in /etc/xorg.conf in the usual fashion:
 
 Section "Device"
 	Identifier "AMD Geode"
 	Driver "geode"
-	Option "blah" "blah"
+	Option "OptionName" "value"
 	...
 EndSection
 
-The following options may be added to the section:
+The following options may be added to such a Device section:
 
 == Common options ==
 
@@ -121,7 +119,7 @@ FBSize: Specify the size of the video space (in bytes)
 NoAccel: Disable hardware assisted acceleration
 NoCompression: Disable video bandwidth compression
 NoPanel: Disable panel support
-Rotate: Select a orientation to start with - LEFT, INVERT, CCW
+Rotate: Select an initial orientation - LEFT, INVERT, CCW
 SWCursor: Enable software cursors (essentially disabling HW cursor support)
 
 == GX-specific options ==
