Added info about the Geode developers' IRC channel in README.

--- a/README
+++ b/README
@@ -11,6 +11,9 @@ Gitweb browser:
 Project homepage:
 	http://www.x.org/wiki/GeodeDriver
 
+IRC channel:
+	#geode on the Freenode network.
+
 = Introduction =
 
 This is the X graphics driver for the AMD Geode GX and LX processors.
