--- a/README
+++ b/README
@@ -2,14 +2,22 @@ xf86-video-geode -- AMD Geode GX and LX graphics driver for X.org
 =================================================================
 README last updated: 2011-11-21
 
-GIT repository:
-        git://anongit.freedesktop.org/git/xorg/driver/xf86-video-geode
-
-Gitweb browser:
-        http://cgit.freedesktop.org/xorg/driver/xf86-video-geode
+= Project Contacts =
 
 Project homepage:
 	http://www.x.org/wiki/GeodeDriver
+
+Mailing list:
+	http://lists.x.org/mailman/listinfo/xorg-driver-geode
+
+Bug reports:
+        https://bugs.freedesktop.org/enter_bug.cgi?product=xorg&component=Driver%2Fgeode
+
+Code browser:
+        http://cgit.freedesktop.org/xorg/driver/xf86-video-geode
+
+Code repository:
+        git://anongit.freedesktop.org/git/xorg/driver/xf86-video-geode
 
 IRC channel:
 	#geode on the Freenode network.
@@ -101,8 +109,8 @@ A: Run the following commands from a command line interpreter shell:
 Q: What is the preferred method for submitting patches to this driver?
 
 A: See http://www.x.org/wiki/Development/Documentation/SubmittingPatches
-   and submit the patches as attachments to the Geode X.org mailing list
-   or to the X.org Bugzilla against component "Driver/geode".
+   and submit the patches to the Geode X.org mailing list or to Bugzilla
+   against product "xorg" component "Driver/geode".
 
 = Configuration options =
 
