--- a/README
+++ b/README
@@ -1,28 +1,8 @@
 xf86-video-geode -- AMD Geode GX and LX graphics driver for X.org
 =================================================================
-README last updated: 2011-11-21
+README last updated: 2011-11-24
 
-= Project Contacts =
-
-Project homepage:
-http://www.x.org/wiki/GeodeDriver
-
-Mailing list:
-http://lists.freedesktop.org/mailman/listinfo/xorg-driver-geode
-
-Bug reports:
-https://bugs.freedesktop.org/enter_bug.cgi?product=xorg&component=Driver%2Fgeode
-
-Code browser:
-http://cgit.freedesktop.org/xorg/driver/xf86-video-geode
-
-Code repository:
-git://anongit.freedesktop.org/git/xorg/driver/xf86-video-geode
-
-IRC channel:
-#geode on the Freenode network.
-
-= Introduction =
+1.INTRODUCTION
 
 This is the X graphics driver for the AMD Geode GX and LX processors.
 The GX component supports both XAA and EXA for graphics acceleration.
@@ -30,7 +10,7 @@ The LX component supports EXA, including compositing. Both support Xv
 overlay and dynamic rotation with XRandR. Additionally, a V4L2 driver
 for the LX's video input port (VIP) feature is provided as "ztv".
 
-= Dependencies =
+2.DEPENDENCIES
 
 Since version 2.9.0, this driver depends on X server 1.3 or greater,
 because it utilizes the new common DDC probing libraries from X.Org.
@@ -42,7 +22,7 @@ http://lists.freedesktop.org/archives/xorg-commit/2007-February/010341.html
 
 Patches accomplishing the same trick for the Geode driver are welcome.
 
-= Roadmap =
+3.ROADMAP
 
 Support for old GX1 Geodes by Cyrix and NSC will be reintroduced soon,
 at which point xf86-video-cyrix and xf86-video-nsc will be retired.
@@ -64,7 +44,7 @@ xf86-video-cyrix
 Please note that both NSC and GEODE support GX2. This is indeed correct.
 However, only GEODE has up-to-date code, while NSC is deprecated. 
 
-= Maximum Resolutions =
+4.MAXIMUM RESOLUTIONS
 
 The driver supports all maximum resolutions advertised by AMD, namely:
 
@@ -72,7 +52,40 @@ LX: 1920x1440 (CRT) and 1600x1200 (TFT)
 GX: 1600x1200 (CRT) and 1280x1024 (TFT)
 SC: 1280x1024 (CRT/TFT) *** Currently unsupported by this driver ***
 
-= FAQ =
+5.CONFIGURATION OPTIONS
+
+You can specify driver options in /etc/X11/xorg.conf in the usual fashion:
+
+Section "Device"
+	Identifier "AMD Geode"
+	Driver "geode"
+	Option "OptionName" "value"
+	...
+EndSection
+
+The following options may be added to such a Device section:
+
+5.1.COMMON OPTIONS
+
+FBSize: Specify the size of the video space (in bytes)
+NoAccel: Disable hardware assisted acceleration
+NoCompression: Disable video bandwidth compression
+NoPanel: Disable panel support
+Rotate: Select an initial orientation - LEFT, INVERT, CCW
+SWCursor: Enable software cursors (essentially disabling HW cursor support)
+
+5.2.GX-SPECIFIC OPTIONS
+
+AccelMethod: "XAA" (default) or "EXA"
+PanelGeometry: Specify the geometry of the attached panel ("<width>x<height>")
+OSMImageBuffers: Set the number of image buffers (XAA only)
+OSMColorExpBuffers: Set the number of color expansion buffers (XAA only)
+
+5.3.LX-SPECIFIC OPTIONS
+
+ExaScratch: Specify the amount of extra EXA scratch buffer (in bytes)
+
+6.FREQUENTLY ASKED QUESTIONS (FAQ)
 
 Q: Why doesn't the GEODE driver work at WXGA (wide screen) resolutions?
 
@@ -81,10 +94,57 @@ A: Make sure that TFT Panel support is disabled in the BIOS settings,
    The GEODE offers a choice between CRT-only, CRT+TFT, TFT-only for
    output device and selecting CRT-only removes the VGA restriction.
 
+Q: How can these hardcoded modes be expanded to support a WXGA laptop?
+
+A: By adding the desired modes to /etc/X11/xorg.conf as follow:
+
+   1) Use either the "cvt" or "gtf" command to determine the modeline:
+
+      cvt 1024 600 60
+
+      Where 1024x600 is the resolution and 60 the refresh rate. 
+      The resulting modeline is:
+
+Modeline "1024x600" 48.96 1024 1064 1168 1312 600 601 604 622 -hsync +vsync
+
+   2) Add it to the bottom of the "Monitor" section in /etc/X11/xorg.conf.
+      In this example, we created entries for two modes and configured the
+      larger resolution to be our preferred choice.
+
+#############################################################
+# /etc/X11/xorg.conf for 1024x600 and 800x480 laptop panels #
+#############################################################
+#### By J.KASPER and B.HIBRY #### for Hercules eCafe 800 ####
+#############################################################
+Section "Device"
+    Identifier	"card0"
+    Driver	"geode"
+    BusID	"PCI:0:1:1"
+    Option	"PanelMode" "33450 800 840 968 1056 480 490 492 525"
+EndSection
+Section "Monitor"
+    Identifier	"monitor0"
+    Modeline	"1024x600" 48.96 1024 1064 1168 1312 600 601 604 622 -hsync +vsync
+    Modeline	"800x480" 33.45 800 840 968 1056 480 490 492 525 -hsync -vsync
+    Option	"dpms"
+EndSection
+Section "Screen"
+    Identifier	"Default Screen"
+    Monitor	"monitor0"
+    Device	"card0"
+    DefaultDepth 24
+    Subsection "Display"
+        Depth 24
+        Modes "1024x600" "800x480"
+    EndSubsection        
+EndSection
+### EOF ###
+
 Q: Why doesn't screen rotation work?
 
 A: Make sure that a sufficient amount of video RAM is reserved in the BIOS,
    otherwise rotation will fail and this error message appear in Xorg.log:
+
       Couldn't allocate the shadow memory for rotation
       You need XX bytes, but only YY bytes are available
 
@@ -112,73 +172,24 @@ A: See http://www.x.org/wiki/Development/Documentation/SubmittingPatches
    and submit the patches to the Geode X.org mailing list or to Bugzilla
    against product "xorg" component "Driver/geode".
 
-= Configuration options =
+7.PROJECT CONTACTS
 
-You can specify driver options in /etc/X11/xorg.conf in the usual fashion:
+Project homepage:
+http://www.x.org/wiki/GeodeDriver
 
-Section "Device"
-	Identifier "AMD Geode"
-	Driver "geode"
-	Option "OptionName" "value"
-	...
-EndSection
+Mailing list:
+http://lists.freedesktop.org/mailman/listinfo/xorg-driver-geode
 
-The following options may be added to such a Device section:
+Bug reports:
+https://bugs.freedesktop.org/enter_bug.cgi?product=xorg&component=Driver%2Fgeode
 
-== Common options ==
+Code browser:
+http://cgit.freedesktop.org/xorg/driver/xf86-video-geode
 
-FBSize: Specify the size of the video space (in bytes)
-NoAccel: Disable hardware assisted acceleration
-NoCompression: Disable video bandwidth compression
-NoPanel: Disable panel support
-Rotate: Select an initial orientation - LEFT, INVERT, CCW
-SWCursor: Enable software cursors (essentially disabling HW cursor support)
+Code repository:
+git://anongit.freedesktop.org/git/xorg/driver/xf86-video-geode
 
-== GX-specific options ==
+IRC channel:
+#geode on the Freenode network.
 
-AccelMethod: "XAA" (default) or "EXA"
-PanelGeometry: Specify the geometry of the attached panel ("<width>x<height>")
-OSMImageBuffers: Set the number of image buffers (XAA only)
-OSMColorExpBuffers: Set the number of color expansion buffers (XAA only)
-
-== LX-specific options ==
-
-ExaScratch: Specify the amount of extra EXA scratch buffer (in bytes)
-
-=== Using these and standard xorg.conf options ===
-
-Here is a sample configuration that defines arbitrary panel resolutions
-such as those available on the Hercules eCafe 800:
-
-#############################################################
-# /etc/X11/xorg.conf for 1024x600 and 800x480 laptop panels #
-#############################################################
-#### By J.KASPER and B.HIBRY #### for Hercules eCafe 800 ####
-#############################################################
-
-Section "Device"
-    Identifier	"card0"
-    Driver	"geode"
-    BusID	"PCI:0:1:1"
-    Option	"PanelMode" "33450 800 840 968 1056 480 490 492 525"
-EndSection
-
-Section "Monitor"
-    Identifier	"monitor0"
-    Modeline	"1024x600" 48.96 1024 1064 1168 1312 600 601 604 622 -hsync +vsync
-    Modeline	"800x480" 33.45 800 840 968 1056 480 490 492 525 -hsync -vsync
-    Option	"dpms"
-EndSection
-
-Section "Screen"
-    Identifier	"Default Screen"
-    Monitor	"monitor0"
-    Device	"card0"
-    DefaultDepth 24
-    Subsection "Display"
-        Depth 24
-        Modes "1024x600" "800x480"
-    EndSubsection        
-EndSection
-
-### EOF ###
+.EOF.
