--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,44 @@
+Geode 2.11.14 (2012-11-??)
+==========================
+Better compatibility with xserver-1.13, cairo-1.12 and gtk3.
+
+ * Fix building on Xservers without XAA (Maarten Lankhorst)
+   xserver-1.13 dropped XAA acceleration method, as it does not accel
+   anything important used on modern desktops.
+   The geode driver now supports configuring whether to include XAA
+   support - by default it is automatically disabled with newest
+   xservers that do not support it, but can be explicitly disabled for
+   older xservers as well if desired (particularly for LX deployments).
+   XAA support remains in place for the time being for older xservers,
+   as the EXA support for GX2 GPUs is of unknown quality and speed.
+
+ * Fix building with new xserver-1.13 API (Maarten Lankhorst)
+   xserver-1.13 changed API, including moving various global symbols
+   behind function calls, to better support multiple switchable graphics
+   cards and hotplugged (USB) graphics cards. Work done to support both
+   pre-1.13 and 1.13+ APIs in other drivers is reused to bring the same
+   support to the Geode driver.
+
+ * Implement solid source pictures acceleration (Mart Raudsepp)
+   cairo-1.12 uses these extensively for text rendering, instead of 1x1
+   repeating images that cairo-1.10 used and we already accelerate.
+   Without acceleration, in addition to being slow, we'd hit a fallback
+   handling bug in EXA with xserver older than 1.13.1, which results in
+   very visible text corruption in many instances.
+
+ * Handle negative srcX and srcY parameters better in EXA Composite
+   operations, used via the RENDER extension (Mart)
+   Handling of source picture coordinates outside actual source pixmap
+   area is still subpar and ignoring spec in some corner cases, but
+   a more specific case is improved to provide correct results in more
+   situations. In particular this fixes GtkTrayIcon drawing via cairo as
+   used by gtk3, specifically as seen in GNOME3 fallback desktop.
+   Previously no icon was drawn at all if the icon needed centering to the
+   drawing area, which in the end is achieved via a negative srcX/srcY.
+   https://bugs.freedesktop.org/show_bug.cgi?id=51360
+
+ * Various build fixes on exotic or non-target platforms.
+
 Geode 2.11.13 (2011-12-26)
 ==========================
 This release mainly features a complete overhaul of the building scripts plus
