--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,12 @@ Extensive driver cleanup by Enrico Weigelt:
    were removed. The minimal X server version is 1.18 hereafter. This
    Geode driver's version was bumped to 2.18.x to reflect this.
 
+Extensive driver cleanup by Connor Behan:
+
+ * A configure option to disable the GX component was added.
+ * Remaining XAA support in the GX component was removed.
+ * Compiler warnings were cleaned up.
+
 Geode 2.11.16 (2014-07-17)
 ==========================
 No user-visible change:
